Fix content gap with

--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@ body {
 .content {
   display: flex;
   flex-direction: column;
-  gap: 1.6rem; }
+  gap: 1.2rem; }
   .content__category {
     width: fit-content;
     font-size: 1.4rem;
