--- a/scss/components/_blog-card.scss
+++ b/scss/components/_blog-card.scss
@@ -19,7 +19,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 1.2rem;
 
   &__category {
     width: fit-content;
